# Not-Real-Estate-Agent

./: .env  .gitignore  Dockerfile  LICENCE  README.md  agent.ipynb  agents.ipynb  agentsimple.ipynb  analysis.md  frontend.py  pyproject.toml  requirements.txt  result.md  scrapper.ipynb  template.yaml
app/: main.py
app/src/: graph.py  models.py  nodes.py  scrapper.py  state.py
src/utils/: scrapper.py
