[project]
name = "buscamidepto-scrapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-sam-cli>=1.138.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.13",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
    "mangum>=0.19.0",
    "ollama>=0.4.8",
    "openai>=1.79.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    # In development mode, include the FastAPI development server.
    "fastapi[standard]>=0.115",
]
